src/sass/autocomplete.scss
.container-email {
    position: relative;
    color: $gray;
    font-size: 13px;
    * {
        box-sizing: border-box;
    }
    .input-email {
        display: flex;
        flex-wrap: wrap;
        min-height: 30px;
        line-height: 30px;
        padding: 0 6px;
        vertical-align: middle;
        position: relative;
        form {
            flex: 1;

            input {
                width: 100%;
                display: block;
            }

            input:focus {
                min-width: 100px;
            }
        }
    }

    .label-email {
        border: 1px solid $gray-light;
        background-color: $read;
        margin-top: 5px;
        text-shadow: none;
        border-radius: 2px;
        padding-left: 5px;
        margin-right: 5px;
        display: inline-block;
        line-height: 22px;
        height: 22px;
        word-break: break-all;

        &.invalid {
            border-color: $red;
            color: $red;
        }
    }

    .label-email a {
        font-weight: normal;
        margin-right: 5px;
        cursor: pointer;
    }

    .input-email input[type="text"] {
        border: none;
        resize: none;
        padding: 0 5px !important;
        outline: none;
        margin-bottom: 0;
        box-shadow: none;
        height: 30px;
        line-height: 30px;
        overflow: hidden;
        white-space: nowrap;
        transition: none;
    }

    .autocomplete-email {
        z-index: 999;
        list-style-type: none;
        border: 1px solid $border;
        position: absolute;
        background-color: white;
        max-height: 150px;
        overflow-y: auto;
        width: 100%;
        margin: 0;
        padding: 0;

        li {
            cursor: pointer;
            padding: 0;
            margin: 0;

            &.selected, &:hover.selected {
                background-color: $gray-light;
            }

            &:hover {
                background-color: $light;
            }

            a {
                color: $gray;
                line-height: 30px;
                padding-left: 10px;
                padding-right: 10px;
                display: block;
                text-decoration: none;
            }
        }
    }
}

