Fix autocomplete problem with the value is too long

--- a/src/sass/autocomplete.scss
+++ b/src/sass/autocomplete.scss
@@ -35,21 +35,29 @@
         border-radius: 2px;
         padding-left: 5px;
         margin-right: 5px;
-        display: inline-block;
+        display: flex;
         line-height: 22px;
         height: 22px;
-        word-break: break-all;
+        max-width: 100%;
 
         &.invalid {
             border-color: $red;
             color: $red;
         }
-    }
 
-    .label-email a {
-        font-weight: normal;
-        margin-right: 5px;
-        cursor: pointer;
+        span {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            width: 100%;
+        }
+
+        a {
+            color: $gray;
+            margin-left: 5px;
+            margin-right: 5px;
+            cursor: pointer;
+        }
     }
 
     .input-email input[type="text"] {
